# cashback_optimizer

./: README.md  api.py  credit_cards_optimizer.py  main.py  models.py  optimizer.py  pyproject.toml  requirements.txt  translations.py  ui.py
cards/: __init__.py  alrajhi.py  bsf.py  nayfat.py  nbd.py  sabb.py  saib.py  snb.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
tests/: test_cards.py  test_models.py  test_optimizer.py  test_ui.py
