[project]
name = "credit-card-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "plotly-express>=0.4.1",
    "pulp>=3.2.1",
    "pytest>=8.4.1",
    "streamlit>=1.47.1",
    "watchdog>=6.0.0",
]
